--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 /* start dark theme btn*/
 * {
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 10;
   position: relative;
+  font-family: "Montserrat";
 }
 
 :root {
@@ -14,7 +15,6 @@
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
   background: var(--white);
   color: var(--foreground);
   transition: color var(--transition);
@@ -88,9 +88,10 @@ html::before {
   justify-content: space-around;
   align-items: center;
 }
+
 .Title {
   text-align: center;
-  font-family: Pattaya;
+  font-family: "Pattaya";
   font-size: 30px;
   line-height: 42px;
   font-weight: 400;
@@ -106,13 +107,14 @@ html::before {
 
   box-shadow: inset 0px 4px 19px rgba(0, 0, 0, 0.05);
 }
+
 .MiddleGround {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: "Montserrat";
   font-size: 12px;
 }
+
 .inputHeader {
   padding: 0.5em;
   margin: 0.5em;
@@ -123,17 +125,81 @@ html::before {
   color: var(--foreground);
   width: 100%;
 }
+
 .header_nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 8px;
 }
+
 .NavItem {
   padding: 0.5em;
   margin: 0.5em;
-  font-family: "Montserrat";
+
   font-size: 12px;
   font-style: normal;
   font-weight: 700;
+}
+
+/* img card */
+.imgCardBody {
+  max-width: 320px;
+  height: auto;
+  border-radius: 12px;
+  margin: 1rem;
+
+}
+
+.imgCardBody img {
+  width: 100%;
+  border-radius: 12px;
+}
+
+.ImgCardDetails {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px;
+}
+
+.ImgCardProfile {
+  width: 100%;
+  max-height: 59px;
+  margin: 4px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.ImgCardProfile img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.ImgProfileDetails {
+  display: flex;
+  flex-direction: column;
+  margin-left: 8px;
+}
+
+.ImgProfileDetails h3,
+.ImgProfileDetails p {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 15px;
+}
+
+.ImgProfileDetails p {
+  color: grey;
+  font-weight: 600;
+  font-size: 10px;
+}
+
+.ImgCardLikes {
+  display: flex;
+  align-items: center;
+  padding: 0 8px;
+  font-size: 12px;
 }
