--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   --white: #f5f5f5;
   --background: var(--white);
   --foreground: var(--black);
-  --transition: 0.5s ease;
+  --transition: 1s ease;
 }
 
 html {
@@ -144,15 +144,17 @@ html::before {
 
 /* img card */
 .imgCardBody {
-  max-width: 320px;
+  max-width: 470px;
+  max-height: 275px;
   height: auto;
   border-radius: 12px;
   margin: 1rem;
-
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 .imgCardBody img {
   width: 100%;
+  max-height: 100%;
   border-radius: 12px;
 }
 
