--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   z-index: 10;
   position: relative;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
 }
 
 :root {
@@ -18,6 +18,10 @@ html {
   background: var(--white);
   color: var(--foreground);
   transition: color var(--transition);
+}
+
+.body {
+  min-height: 100vh;
 }
 
 html::before {
@@ -149,7 +153,7 @@ html::before {
   height: auto;
   border-radius: 12px;
   margin: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 .imgCardBody img {
@@ -205,3 +209,39 @@ html::before {
   padding: 0 8px;
   font-size: 12px;
 }
+
+/* searchBody */
+.searchBody {
+  width: 100%;
+  min-height: 50vh;
+  background: url(./assets/searchBackground.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.searchBody h1 {
+  font-size: 32px;
+}
+
+.searchBody p {
+  font-size: 14px;
+}
+
+.searchInput {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: var(--white);
+  border-radius: 24px;
+}
+
+/* end  searchBody */
