--- a/src/App.css
+++ b/src/App.css
@@ -148,17 +148,25 @@ html::before {
 
 /* img card */
 .imgCardBody {
-  max-width: 470px;
-  max-height: 275px;
-  height: auto;
+  max-width: 100vw;
+  max-height: 400px;
+  width: min-content;
   border-radius: 12px;
-  margin: 1rem;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  transition: all 0.5s ease;
+}
+
+.imgCardBody:hover {
+  translate: 0 -10px;
+  transition: all 0.5s ease;
 }
 
 .imgCardBody img {
-  width: 100%;
-  max-height: 100%;
+  max-width: 90vw;
+  width: -webkit-fill-available;
+  height: 100%;
+  max-height: 313px;
   border-radius: 12px;
 }
 
@@ -234,6 +242,7 @@ html::before {
   font-size: 14px;
 }
 
+
 .searchInput {
   width: 50%;
   height: 100%;
@@ -244,4 +253,41 @@ html::before {
   border-radius: 24px;
 }
 
-/* end  searchBody */
+.searchResults {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: baseline;
+  background-color: var(--background);
+  color: var(--foreground);
+  z-index: 9999;
+}
+
+
+.searchInput input {
+  color: black;
+}
+
+.searchResults p {
+  font-size: 14px;
+  font-weight: 600;
+  width: 36px;
+  color: var(--foreground);
+}
+
+.galleryBody {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.gallery {
+  margin: 4rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
