--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   --white: #f5f5f5;
   --background: var(--white);
   --foreground: var(--black);
-  --transition: 1s ease;
+  --transition: 0.25s ease;
 }
 
 html {
@@ -284,10 +284,44 @@ html::before {
 }
 
 .gallery {
-  margin: 4rem auto;
+  margin: 2rem auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
+  gap: 1rem;
+}
+
+.s_btn_container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  width: 90%;
+  margin: 1rem auto;
+}
+
+.s_btn {
+  padding: 0.5rem 1rem;
+  width: auto;
+  height: auto;
+  border: var(--foreground) 1px solid;
+  outline: none;
+  border-radius: 4px;
+  color: var(--foreground);
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: transparent;
+}
+
+.h-404 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   gap: 1rem;
 }
