--- a/src/App.css
+++ b/src/App.css
@@ -325,3 +325,209 @@ html::before {
   flex-direction: column;
   gap: 1rem;
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999999;
+}
+
+.popup_inner {
+  position: fixed;
+  top: 2;
+  width: 96%;
+  height: 95%;
+  background: var(--background);
+  border-radius: 12px;
+  padding: 0.1rem;
+}
+
+.pop_img {
+  border-radius: 12px;
+  width: 100%;
+  height: 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.close_btn {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid var(--foreground);
+  color: var(--foreground);
+  background: var(--background);
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  z-index: 9999;
+}
+
+.pop_img_inner {
+  position: absolute;
+  width: 100%;
+  margin: auto;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 1rem 2rem;
+
+}
+
+.pop_img_inner div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  background: transparent;
+}
+
+.pop_img_inner div button {
+  background: transparent;
+  color: #121212;
+  border: 1px solid black;
+  outline: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  font-size: 10px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.download_btn {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-weight: 700;
+}
+
+.details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--background);
+  padding: 0.3rem 0rem;
+}
+
+.profileDetails {
+  display: flex;
+  flex-direction: space-between;
+  align-items: center;
+  margin: 0 1rem;
+}
+
+.profile {
+  display: flex;
+  margin: 0 8px;
+  gap: 1rem;
+}
+
+.profile img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profile_name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.profile_name h3 {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--foreground);
+}
+
+.profile_name p {
+  font-size: 10px;
+  font-weight: 400;
+  color: var(--foreground);
+}
+
+.social {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  margin: 0 8px;
+}
+
+.social button {
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 12px;
+  color: var(--foreground);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.counts {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  margin: 0 8px;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.like_counts {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.tags {
+
+  gap: 1rem;
+  margin: 0 8px;
+}
+
+.tags p {
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--foreground);
+  margin: 8px;
+}
+
+.s_btn_primary {
+  padding: 0.3rem 1rem;
+  margin: 0 8px;
+}
+
+.hide {
+  display: none;
+}
+
+.none {
+  overflow: none;
+}
