--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ html::before {
   transform: translateX(30px);
 }
 
+/* //   code author:pyansh */
 .toggle input {
   opacity: 0;
   position: absolute;
