--- a/src/App.css
+++ b/src/App.css
@@ -288,7 +288,7 @@ html::before {
   margin: 2rem auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+      justify-content: center;
   align-items: center;
   gap: 1rem;
 }
